--- a/.env
+++ b/.env
@@ -11,5 +11,5 @@ SMTP_PORT=587
 SMTP_USER=arento.kislovodsk@gmail.com
 SMTP_SELECTION=knyazevdanik55@gmail.com
 SMTP_PASSWORD='bwoi roob ifso bgde'
-API_URL=http://arento.ru:5000
-CLIENT_URL=http://arento.ru:3000
+API_URL=http://localhost:5000
+CLIENT_URL=http://localhost:3000
