--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-fileupload": "^1.4.3",
     "express-validator": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "node": "^23.0.0",
     "nodemailer": "^6.9.13",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
