--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PORT=5000
-DB_NAME=Sait_kvart
-DB_USER=postgres
-DB_PASSWORD=123123
+DB_NAME=pgtestbd
+DB_USER=pgtestbd
+DB_PASSWORD=uI0xJ4yV0h
 DB_HOST=localhost
 DB_PORT=5432
 SECRET_KEY=random_secret_key58736457835421759427598327163796832197652869
