--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=5000
-DB_NAME=pgtestbd
-DB_USER=pgtestbd
+DB_NAME=pgtestdb
+DB_USER=pgtestdb
 DB_PASSWORD=uI0xJ4yV0h
 DB_HOST=localhost
 DB_PORT=5432
