--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PORT=5000
-DB_NAME=Sait_kvart
-DB_USER=postgres
-DB_PASSWORD=123123
+DB_NAME=pgtestdb
+DB_USER=pgtestdb
+DB_PASSWORD=uI0xJ4yV0h
 DB_HOST=localhost
 DB_PORT=5432
 SECRET_KEY=random_secret_key58736457835421759427598327163796832197652869
@@ -11,5 +11,5 @@ SMTP_PORT=587
 SMTP_USER=arento.kislovodsk@gmail.com
 SMTP_SELECTION=knyazevdanik55@gmail.com
 SMTP_PASSWORD='bwoi roob ifso bgde'
-API_URL=http://localhost:5000
-CLIENT_URL=http://localhost:3000
+API_URL=http://89.108.109.209:5000
+CLIENT_URL=https://www.arento.ru
